--- a/QLNV/App.config
+++ b/QLNV/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="QLNV.Properties.Settings.QLNVConnectionString" connectionString="Data Source=DESKTOP-54EQF0R\SQLEXPRESS;Initial Catalog=QLNV;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
